--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -14,3 +14,6 @@
 
 <%= link_to "create", new_list_bookmark_path(@list) %>
 <%= link_to "back", lists_path %>
+
+<%= cl_image_tag("v1660901334/bekqnhqqbzxps4oxcx6h.jpg",
+      width: 400, height: 300, crop: :fill) %>
