--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,18 +1,20 @@
 <h1>Show</h1>
 <ul class="list-group">
   <% @list.bookmarks.each do |bookmark| %>
-    <li class="list-group-item"><%= bookmark.comment %></li>
-<li>
-<%= link_to "Delete",
-    bookmark_path(bookmark),
-    data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-  %>
-</li>
+
+    <li class="list-group-item"> <%= bookmark.comment %>
+    <%= link_to "Delete",
+      bookmark_path(bookmark),
+      data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+    %>
+    </li>
   <% end %>
 </ul>
-<br>
 
 <%= link_to "create", new_list_bookmark_path(@list) %>
 <%= link_to "back", lists_path %>
 
-<%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
+
+<% if @list.photo.attached? %>
+  <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
+<% end %>
